# siphonowar

./: .gitignore  Cargo.toml  README.md  TODO.txt
.cargo/: config.toml
assets/models/connector/: connector.blend  connector.gltf
assets/models/lightning/: lightning.blend  lightning.glb
assets/models/minerals/: GemStone.glb
assets/models/rocks/: RocksLowPoly.blend  RocksLowPoly.gltf
assets/models/terrain/: terrain1.blend
assets/models/triangle/: base.txt  debug.txt  triangle.blend  triangle.blend1  triangle.glb  triangle.gltf
assets/models/zooids/armor/: armor.blend  armor.glb
assets/models/zooids/shocker/: shocker.blend  shocker.glb
assets/models/zooids/worker/: worker.blend  worker.glb
assets/scenes/: config.scn.ron  test-new.scn.ron  test.scn.ron
assets/shaders/: constants.wgsl  fog_of_war.wgsl  grid.wgsl  grid_background.wgsl  minimap.wgsl  navigation_shader.wgsl  obstacles.wgsl  post_processing.wgsl  sampler.wgsl  team.wgsl
crates/bevy_bloom/: Cargo.toml
crates/bevy_bloom/src/: bloom.wgsl  downsampling_pipeline.rs  lib.rs  settings.rs  upsampling_pipeline.rs
crates/bevy_bundletree/: Cargo.toml
crates/bevy_bundletree/src/: lib.rs
crates/bevy_newtonian2d/: Cargo.toml  README.md
crates/bevy_newtonian2d/src/: lib.rs
crates/sipho/: Cargo.toml
crates/sipho/src/: ambience.rs  camera.rs  config.rs  console.rs  effects.rs  inputs.rs  lib.rs  meshes.rs  physics.rs  raycast.rs  scene.rs  selector.rs  terrain.rs  waypoint.rs  window.rs
crates/sipho/src/creatures/: mod.rs  snake.rs
crates/sipho/src/grid/: entity.rs  fog.rs  minimap.rs  mod.rs  navigation.rs  navigation_visualizer.rs  obstacles.rs  shader_plane.rs  sparse_grid2.rs  spec.rs
crates/sipho/src/objectives/: config.rs  cooldown.rs  dash_attacker.rs  debug.rs  mod.rs  navigator.rs  objective.rs  shock_attacker.rs  stun.rs
crates/sipho/src/objects/: ai.rs  assets.rs  background.rs  builder.rs  carry.rs  commands.rs  config.rs  consumer.rs  damage.rs  elastic.rs  mod.rs  neighbors.rs  object.rs  object_tree.rs  objective.rs  path_to_head.rs  plankton.rs  zooid_head.rs  zooid_worker.rs
crates/sipho/src/ui/: mod.rs  pause_menu.rs  selector.rs  waypoint.rs
crates/sipho/src/ui/hud/: assets.rs  controls_pane.rs  minimap.rs  mod.rs  selected_pane.rs
crates/sipho_core/: Cargo.toml
crates/sipho_core/src/: aabb.rs  camera.rs  controls.rs  cursor.rs  despawn.rs  error.rs  game_state.rs  inputs.rs  lib.rs  meshes.rs  pause.rs  physics.rs  pool.rs  raycast.rs  rowcol.rs  shader_plane.rs  smallset.rs  stages.rs  system_sets.rs  team.rs  window.rs  world_assets.rs  zindex.rs
crates/sipho_core/src/camera/: controller.rs  mod.rs
crates/sipho_core/src/grid/: astar.rs  entity.rs  fog.rs  grid2.rs  minimap.rs  mod.rs  navigation.rs  obstacles.rs  rowcol.rs  sparse_grid2.rs  spec.rs  visualizer.rs
crates/sipho_core/src/nav/: astar.rs  debug.rs  flow_grid.rs  mod.rs  navigator.rs
crates/sipho_sfx/: Cargo.toml
crates/sipho_sfx/src/: assets.rs  events.rs  lib.rs  manager.rs  sampler.rs
crates/sipho_vfx/: Cargo.toml
crates/sipho_vfx/src/: bubbles.rs  fireworks.rs  lib.rs  lightning.rs  post_processing.rs
src/: debug.rs  main.rs
src/debug/: console.rs  fps.rs  mod.rs
