
[package]
categories = ["game", "bevy"]
description = "RTS game based on siphonophores."
edition = "2021"
exclude = ["assets/", "tools/", ".github/", "crates/"]
keywords = ["game", "engine", "gamedev", "graphics", "bevy"]
license = "MIT OR Apache-2.0"
name = "siphonowar"
readme = "README.md"
repository = "https://github.com/Katsutoshii/siphonowar"
rust-version = "1.76.0"
version = "0.1.0"

[dependencies]
bevy = {version = "0.14", features = ["file_watcher"]}
bevy-inspector-egui = {version = "0.25", optional = true}
bevy_console = { git = "https://github.com/msklosak/bevy-console.git", branch = "bevy_014" }
clap = "4.5.2"
image = "0.25.1"
sipho = {path = "crates/sipho"}
sipho_core = {path = "crates/sipho_core"}
strum_macros = "0.26.2"

[workspace]
members = [
  "crates/*",
]

[lints]
workspace = true

[workspace.lints.clippy]
type_complexity = "allow"

[features]
debug = ["dep:bevy-inspector-egui"]
default = ["debug"]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
strip = "debuginfo"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
debug = false
opt-level = 3
