[package]
edition = "2021"
name = "bevy_bundletree"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.13.2", features = ["dynamic_linking", "file_watcher"]}
from-enum = "0.1.1"

[lints]
workspace = true

