[package]
edition = "2021"
name = "bevy_newtonian2d"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.13.2", features = ["dynamic_linking", "file_watcher"]}
derive_more = "0.99.17"

[lints]
workspace = true
