[package]
edition = "2021"
name = "sipho"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.13.0", features = ["dynamic_linking", "file_watcher"]}
clap = "4.5.2"
rand = "0.8.5"
serde = "1.0.192"
strum_macros = "0.26.2"

sipho_core = {path = "../sipho_core"}
sipho_vfx = {path = "../sipho_vfx"}
