[package]
edition = "2021"
name = "sipho"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.14", features = ["file_watcher"] }
clap = "4.5.2"
rand = "0.8.5"
serde = "1.0.192"
strum_macros = "0.26.2"
sipho_core = { path = "../sipho_core" }
sipho_vfx = { path = "../sipho_vfx" }
bevy_newtonian2d = { path = "../bevy_newtonian2d" }
bevy_bloom = { path = "../bevy_bloom" }
bevy_bundletree = "0.1.2"
bevy_heightmap = "0.2.3"
sipho_sfx = { path = "../sipho_sfx" }
enum-iterator = "1.4.1"
smallvec = "1.13.2"
[lints]
workspace = true
