[package]
edition = "2021"
name = "sipho_core"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.4"
bevy = {version = "0.14.0", features = ["file_watcher"]}
bevy_mod_raycast = "0.18.0"
clap = "4.5.2"
derive_more = "0.99.17"
image = "0.25.1"
rand = "0.8.5"
serde = "1.0.192"
enum-iterator = "1.4.1"
bevy_newtonian2d = {path = "../bevy_newtonian2d"}
smallvec = "1.6.1"

[lints]
workspace = true
