[package]
edition = "2021"
name = "sipho_sfx"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.14.0", features = ["file_watcher"]}
derive_more = "0.99.17"
image = "0.25.1"
rand = "0.8.5"
serde = "1.0.192"

sipho_core = {path = "../sipho_core"}

[lints]
workspace = true
