[package]
edition = "2021"
name = "sipho_vfx"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.14.0", features = ["file_watcher"]}
bevy_hanabi = { version = "0.12.0" }
derive_more = "0.99.17"
profiling-procmacros = "1.0.15"
rand = "0.8.5"
serde = "1.0.192"
sipho_core = {path = "../sipho_core"}
thiserror = "1.0.62"

[lints]
workspace = true

[features]
# Defines a feature named `webp` that does not enable any other features.
webgl2 = []
